<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginHorizontal="25dp"
    android:layout_marginVertical="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvInventoryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/inventory_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvExpired"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/expired"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInventoryName"/>

        <Button
            android:id="@+id/btnConsume"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="150dp"
            android:layout_marginBottom="8dp"
            android:text="@string/consume"
            android:textStyle="bold"
            android:textSize="9sp"
            android:backgroundTint="@color/dark_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

         <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/remove"
            android:textStyle="bold"
             android:textSize="9sp"
             android:backgroundTint="@color/red_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/btnConsume" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>