<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addItem.AddItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_grey"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385">

        <TextView
            android:id="@+id/tvItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.kukaskitaappv2.customView.MyEditText
            android:id="@+id/etItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/item_name"
            android:minHeight="48dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItem" />

        <TextView
            android:id="@+id/tvExpDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/expDate"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etItemName" />

        <TextView
            android:id="@+id/tvExpired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tvExpDate"
            app:layout_constraintTop_toBottomOf="@+id/etItemName" />

        <Button
            android:id="@+id/btnInputDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_green"
            android:text="@string/inputDate"
            android:textSize="9sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExpDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:text="@string/addToInventory"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/inputForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_openCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/darker_green"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toTopOf="@id/fab_openGallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_openGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/darker_green"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toTopOf="@id/fab_AddFromCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_AddFromCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:src="@drawable/ic_close_24"
        android:backgroundTint="@color/darker_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.96"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>